# financial-complaint-rag

./: .coverage  .gitignore  README.md  app.py  check_parquet.py  pyproject.toml  read_gzipped_parquet.py  requirements.txt  requirements_fixed.txt  run_task1_simple.py  run_tests.py  test_gradio_multiple_outputs.py  test_gradio_simple.py  test_imports.py  test_task2_modules.py  verify_data.py  verify_embeddings_correct.py  verify_fixes.py  verify_new_embeddings.py
.github/workflows/: ci.yml  unittests.yml
config/: settings.yaml
notebooks/: README.md  __init__.py  task_1_eda_preprocessing.py  task_2_embedding_pipeline.py  task_2_phase2_embeddings.py  task_2_phase2_simple.py  task_2_phase2_standalone.py  task_3_rag_with_prebuilt.py
scripts/: check_file_format.py  create_fresh_summary.py  filter_cfpb_data.py  verify_embeddings_fixed.py  verify_task1.py
src/data_preprocessing/: __init__.py  data_analyzer.py  data_cleaner.py  data_loader.py
src/embedding/: __init__.py  embedding_generator.py  lightweight_embedding_generator.py  simple_embedding_model.py  text_chunker.py
src/generation/: answer_generator.py
src/retrieval/: rag_retriever.py
src/sampling/: __init__.py  stratified_sampler.py
tests/: test_data_preprocessing.py  test_embedding.py  test_gradio_financial.py  test_imports.py
tests/data_preprocessing/: test_data_analyzer.py  test_data_cleaner.py  test_data_loader.py
